# restack-gen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  E2E_VALIDATION.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  TEST_JIRA_INTEGRATION.md  VALIDATOR_COVERAGE_IMPROVEMENT.md  consolidate_code.py  jira.env  pyproject.toml  restack_gen_source_code.md  setup_jira_integration.py
.github/workflows/: changelog-sync.yml  ci.yml  jira-integration.yml
client/: schedule_test.py
docs/: DECISIONS.md  PR4_COMPLETION.md  PR7_COMPLETION.md  PR7_REQUEST.md  PR_TRACKING.md  RELEASE.md  cli-reference.md  installation.md  kong-setup-test.md  llm-router.md  prompt-versioning.md  templates.md  troubleshooting.md
documentation/: agent-llm-migration.md  fastmcp-tools.md  llm-router.md  pipelines.md  quickstart.md
examples/data_pipeline/: Makefile  README.md  pyproject.toml
examples/data_pipeline/client/: run_workflow.py
examples/data_pipeline/src/data_pipeline/: __init__.py  service.py
examples/data_pipeline/src/data_pipeline/agents/: data_fetcher.py  data_processor.py  data_saver.py
examples/data_pipeline/src/data_pipeline/workflows/: data_pipeline_workflow.py
examples/data_pipeline/tests/: test_data_fetcher.py  test_data_pipeline_workflow.py  test_data_processor.py  test_data_saver.py
examples/email_pipeline/: Makefile  README.md  pyproject.toml  settings.yaml
examples/email_pipeline/client/: run_workflow.py
examples/email_pipeline/src/email_pipeline/: __init__.py  service.py
examples/email_pipeline/src/email_pipeline/agents/: business_handler.py  email_router.py  email_validator.py  personal_handler.py  spam_checker.py  virus_scanner.py
examples/email_pipeline/src/email_pipeline/workflows/: email_pipeline_workflow.py
examples/email_pipeline/tests/: test_email_pipeline_workflow.py
examples/prompted_pipeline/: Makefile  README.md  pyproject.toml  settings.yaml
examples/prompted_pipeline/client/: run_workflow.py
examples/prompted_pipeline/config/: prompts.yaml
examples/prompted_pipeline/prompts/analyze/: v1.0.0.md
examples/prompted_pipeline/src/prompted_pipeline/: __init__.py  service.py
examples/prompted_pipeline/src/prompted_pipeline/common/: prompt_loader.py
examples/prompted_pipeline/src/prompted_pipeline/workflows/: prompted_pipeline_workflow.py
examples/research_agent/: Makefile  README.md  pyproject.toml
examples/research_agent/client/: run_workflow.py
examples/research_agent/src/research_agent/: __init__.py  service.py
examples/research_agent/src/research_agent/common/: fallbacks.py
examples/research_agent/src/research_agent/workflows/: research_workflow.py
restack_gen/: __init__.py  ast_service.py  cli.py  codegen.py  compat.py  console.py  doctor.py  generator.py  ir.py  migration.py  parser.py  project.py  renderer.py  runner.py  stats.py  validator.py
restack_gen/templates/: .env.example.j2  .gitignore.j2  Makefile.j2  README.md.j2  agent.py.j2  client_run_workflow.py.j2  client_schedule_agent.py.j2  compat.py.j2  config_migration.py.j2  fastmcp_manager.py.j2  function.py.j2  llm_router.py.j2  llm_router.yaml.j2  observability.py.j2  pipeline_orchestrator.py.j2  prompt_loader.py.j2  prompt_template.md.j2  prompts.yaml.j2  pyproject.toml.j2  retries.py.j2  scaffold_agent.py.j2  scaffold_model.py.j2  scaffold_test_agent.py.j2  service.py.j2  settings.py.j2  settings.yaml.j2  test_agent.py.j2  test_function.py.j2  test_workflow.py.j2  tool_server.py.j2  tools.yaml.j2  workflow.py.j2
specs/: clarity.md  plan.md  product_specs.md  specs.md
testdemo/: .gitignore  Makefile  README.md  VALIDATION_RESULTS.md  pyproject.toml  test_e2e.py  test_manager.py  test_server.py
testdemo/config/: .env.example  settings.yaml  tools.yaml
testdemo/server/: service.py
testdemo/src/testdemo/common/: compat.py  fastmcp_manager.py  retries.py  settings.py
testdemo/src/testdemo/tools/: __init__.py  research_mcp.py
tests/: conftest.py  test_ast_service.py  test_cli.py  test_codegen.py  test_compat.py  test_compat.py.backup  test_console.py  test_doctor.py  test_doctor_pr9.py  test_fastmcp_manager.py  test_fastmcp_manager.py.backup  test_gemini_integration.py  test_generator.py  test_ir.py  test_llm_router.py  test_llm_router_import_regression.py  test_migration.py  test_observability.py  test_parser.py  test_project.py  test_prompt_versioning.py  test_prompt_versioning.py.backup  test_runner.py  test_scaffold.py  test_stats.py  test_templates.py  test_tool_server.py  test_validator.py
venv311/: pyvenv.cfg
venv311/Scripts/: activate  activate.bat
