[project]
name = "email_pipeline"
version = "0.1.0"
description = "Email processing pipeline example with parallel and conditional operators"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "restack-ai>=0.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
